Mais correções (Funciona pfvKKKKKKKKKKK)